// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Contrib] elements/<Title /> should match snapshot 1`] = `
<div>
  <p
    class="Title-r6qlw8-0 kDtypV"
  />
</div>
`;

exports[`[Contrib] elements/<Title /> should match snapshot with \`isFirst\` prop 1`] = `
<div>
  <p
    class="Title-r6qlw8-0 gmywtA"
  />
</div>
`;

exports[`[Contrib] elements/<Title /> should match snapshot with \`isSecondary\` prop 1`] = `
<div>
  <p
    class="Title-r6qlw8-0 kppepz"
  />
</div>
`;
